--- a/contrib/myplan/trunk/ks-myplan/myplan-web/src/main/webapp/themes/ksap/stylesheets/schedule/saved.less
+++ b/contrib/myplan/trunk/ks-myplan/myplan-web/src/main/webapp/themes/ksap/stylesheets/schedule/saved.less
@@ -11,15 +11,16 @@
     }
 
     .scheduleSaved__courses {
-        width: 210px;
+        width: 205px;
         margin: 0 0 0 5px;
     }
 
     .scheduleSaved__remove {
         width: 16px;
-        margin: 0 0 0 5px;
+        margin: 0;
         line-height: 16px;
         cursor: pointer;
+        float: right;
 
         img {
             width: 16px;
